# Njema

./: .gitignore  Njema.py  pyproject.toml  requirements.txt
.github/workflows/: cloudrun.yml  read_balance.yml  update_stonks_sheet.yml
betClient/: betClient_dafabet.py  cli.py
ccxtClient/: __init__.py  betClient_betika.py
forexClient/: __init__.py
mtuMishi/: mtumishi.py  web_driver.py
